--- a/trunk/Source/MyImage/MasterPage.master
+++ b/trunk/Source/MyImage/MasterPage.master
@@ -45,6 +45,7 @@
               <!----------------------------------------------------------------------->  
           </div>
       </div>
+      <div class="space"></div>
       <div id="footer">
           <div id="footer-wrapper"></div>
       </div>
