--- a/trunk/Source/MyImage/admin/inc/css/web.css
+++ b/trunk/Source/MyImage/admin/inc/css/web.css
@@ -196,7 +196,7 @@ body{
 
 .customer
 {
-	width:780px;
+	width:830px;
 	border-color: #600;
     border-width: 1px;
     border-style: solid;
@@ -210,7 +210,19 @@ body{
     padding: 4px;
     background-color: #FFC;
 }
-.customer tr td.center
+.order
 {
-	text-align:center;
+	width:830px;
+	border-color: #600;
+    border-width: 1px;
+    border-style: solid;
+}
+.order tr,.order tr td
+{
+	border-color: #600;
+    border-width: 1px;
+    border-style: solid;
+    margin: 0;
+    padding: 4px;
+    background-color: #FFC;
 }
