--- a/Source/MyImage/admin/MasterPage.master
+++ b/Source/MyImage/admin/MasterPage.master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
     <title>Untitled Page</title>
-	<meta http-equiv="refresh" content="600">
+	<meta http-equiv="refresh" content="600" />
     <!--[if IE]><p><lin k href="inc/css/ie.css" rel="stylesheet" type="text/css" /></p><![endif]-->
     <link href="inc/css/web.css" rel="stylesheet" type="text/css" />
     <script type='text/javascript' src='inc/js/remote.js'></script>
@@ -43,6 +43,7 @@
               <!----------------------------------------------------------------------->  
           </div>
       </div>
+      <div class="clear"></div>
       <div id="footer">
           <div id="footer-wrapper"></div>
       </div>
