--- a/trunk/Source/MyImage/admin/inc/css/web.css
+++ b/trunk/Source/MyImage/admin/inc/css/web.css
@@ -103,7 +103,6 @@ body{
 }
 #content-main{
     width:830px;
-    height:300px;
     min-height:300px;
     padding:0 10px;
     position:relative;
@@ -188,7 +187,11 @@ body{
     margin-left:-450px;
     margin-top: 10px;
 }
-
+.clear
+{
+	clear:both;
+	height:10px;
+}
 .groupbox{
     margin: 3px 0;
     border: 1px solid #DDDDDD;
@@ -209,6 +212,57 @@ body{
     margin: 0;
     padding: 4px;
     background-color: #FFC;
+}
+.editmod-hide
+{
+	display:none;	
+}
+.editmod-xs
+{
+	width:60px;	
+	vertical-align:middle;
+}
+.editmod-s
+{
+	width:100px;	
+	vertical-align:middle;
+}
+.editmod-m
+{
+	width:140px;	
+	vertical-align:middle;
+}
+.editmod-l
+{
+	width:180px;	
+	vertical-align:middle;
+}
+.editmod-xl
+{
+	width:220px;
+	vertical-align:middle;
+}
+.order-detail
+{
+	width:600px;
+	background-color: #FFC;
+}
+.order-detail tr td
+{
+    margin: 0;
+    padding: 4px;
+}
+.order-detail tr td.style2
+{
+	text-align:right;
+	font-weight:bold;
+	width:150px;
+}
+.order-detail tr td.style1
+{
+	text-align:center;
+	font-weight:bold;
+	width:150px;
 }
 .order
 {
