--- a/Source/MyImage/admin/inc/css/web.css
+++ b/Source/MyImage/admin/inc/css/web.css
@@ -73,7 +73,7 @@ body{
 	margin:0;
 	padding:0;
 	float:right;
-	font-size:20px;	
+	font-size:14px;	
 }
 .nav ul
 {
@@ -213,35 +213,6 @@ body{
     padding: 4px;
     background-color: #FFC;
 }
-.editmod-hide
-{
-	display:none;	
-}
-.editmod-xs
-{
-	width:60px;	
-	vertical-align:middle;
-}
-.editmod-s
-{
-	width:100px;	
-	vertical-align:middle;
-}
-.editmod-m
-{
-	width:140px;	
-	vertical-align:middle;
-}
-.editmod-l
-{
-	width:180px;	
-	vertical-align:middle;
-}
-.editmod-xl
-{
-	width:220px;
-	vertical-align:middle;
-}
 .order-detail
 {
 	width:600px;
@@ -279,4 +250,68 @@ body{
     margin: 0;
     padding: 4px;
     background-color: #FFC;
+}
+.member
+{
+	width:830px;
+	border-color: #600;
+    border-width: 1px;
+    border-style: solid;
+}
+.member tr,.member tr td
+{
+	border-color: #600;
+    border-width: 1px;
+    border-style: solid;
+    margin: 0;
+    padding: 4px;
+    background-color: #FFC;
+}
+.state-province
+{
+	width:400px;
+	border-color: #600;
+    border-width: 1px;
+    border-style: solid;
+}
+.state-province tr,.state-province tr td
+{
+	border-color: #600;
+    border-width: 1px;
+    border-style: solid;
+    margin: 0;
+    padding: 4px;
+    background-color: #FFC;
+}
+
+
+
+.editmod-hide
+{
+	display:none;	
+}
+.editmod-xs
+{
+	width:60px;	
+	vertical-align:middle;
+}
+.editmod-s
+{
+	width:100px;	
+	vertical-align:middle;
+}
+.editmod-m
+{
+	width:140px;	
+	vertical-align:middle;
+}
+.editmod-l
+{
+	width:180px;	
+	vertical-align:middle;
+}
+.editmod-xl
+{
+	width:220px;
+	vertical-align:middle;
 }
