--- a/Source/MyImage/MasterPage.master
+++ b/Source/MyImage/MasterPage.master
@@ -7,6 +7,52 @@
     <title>Untitled Page</title>
     <link href="inc/css/web.css" rel="stylesheet" type="text/css" />
     <!--[if IE]><p><lin k href="inc/css/ie.css" rel="stylesheet" type="text/css" /></p><![endif]-->
+ 
+    <link rel="stylesheet" type="text/css" href="inc/css/calendar-eightysix-default.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="inc/css/calendar-eightysix-vista.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="inc/css/calendar-eightysix-osx-dashboard.css" media="screen" />
+	
+	<script type="text/javascript" src="inc/js/mootools-1.2.4-core.js"></script>
+	<script type="text/javascript" src="inc/js/mootools-1.2.4.2-more.js"></script>
+	<script type="text/javascript" src="inc/js/compressed/calendar-eightysix-v1.0.1.js"></script>
+	
+	
+	<!-- Calendar -->
+	
+	<script type="text/javascript">
+		window.addEvent('domready', function() {
+			new CalendarEightysix('exampleI', 	 { 'offsetY': -4 });
+			new CalendarEightysix('exampleII', 	 { 'startMonday': true, 'format': '%m.%d.%Y', 'slideTransition': Fx.Transitions.Back.easeOut, 'draggable': true, 'offsetY': -4 });
+			new CalendarEightysix('exampleIII',  { 'excludedWeekdays': [0, 6], 'toggler': 'exampleIII-picker', 'offsetY': -4 });
+			new CalendarEightysix('exampleIV', 	 { 'excludedDates': ['12/25/2012', '12/26/2012'], 'defaultDate': '12/01/2012', 'offsetY': -4 });
+			new CalendarEightysix('exampleV',	 { 'theme': 'default red', 'defaultDate': 'next Wednesday', 'minDate': 'tomorrow', 'offsetY': -4 });
+			new CalendarEightysix('exampleVI', 	 { 'defaultView': 'decade', 'theme': 'vista', 'disallowUserInput': true, 'offsetY': -4 });
+			new CalendarEightysix('exampleVII',  { 'defaultView': 'year', 'theme': 'osx-dashboard', 'alignX': 'left', 'alignY': 'bottom', 'offsetX': -4 });
+			new CalendarEightysix('exampleVIII', { 'format': '%A %D %B', 'alignX': 'middle', 'alignY': 'top' });
+			new CalendarEightysix('exampleIXb',	 {
+				'pickFunction': function(date) {
+					$('exampleIXa').set('value', date.get('month') + 1);
+					$('exampleIXc').set('value', date.get('year'));
+				},
+				'linkWithInput': false, 'defaultDate': '1/1/2010', 'minDate': '1/1/2010', 'maxDate': '12/31/2014', 'format': '%d', 'toggler': 'exampleIX-picker', 'offsetY': -4, 'offsetX': 76
+			});
+			
+			MooTools.lang.set('nl-NL', 'Date', {
+				months:    ['Januari', 'Februari', 'Maart', 'April', 'Mei', 'Juni', 'Juli', 'Augustus', 'September', 'Oktober', 'November', 'December'],
+				days:      ['Zondag', 'Maandag', 'Dinsdag', 'Woensdag', 'Donderdag', 'Vrijdag', 'Zaterdag'],
+				dateOrder: ['date', 'month', 'year', '/']
+			});
+			MooTools.lang.set('de-DE', 'Date', {
+				months:    ['Januar', 'Februar', 'M&auml;rz', 'April', 'Mai', 'Juni', 'Juli', 'August', 'September', 'Oktober', 'November', 'Dezember'],
+				days:      ['Sonntag', 'Montag', 'Dienstag', 'Mittwoch', 'Donnerstag', 'Freitag', 'Samstag'],
+				dateOrder: ['date', 'month', 'year', '/']
+			});
+			
+			$('exampleXa').addEvent('click', function() { MooTools.lang.setLanguage('nl-NL'); });
+			$('exampleXb').addEvent('click', function() { MooTools.lang.setLanguage('de-DE'); });
+		});	
+	</script>
+	
 </head>
 <body>
     <form id="mainform" runat="server">
@@ -20,10 +66,7 @@
                 <div class="nav">
                     <asp:contentplaceholder id="ContentPlaceHolderLeft" runat="server">
                     </asp:contentplaceholder>
-                    <ul>
-                        <li><a href="#">Home</a><em></em></li>
-                        <li><a href="#">Thông tin công nghệ</a><em></em></li>
-                    </ul>
+                    
                 </div>
               </div>
               <div id="content-right">
@@ -51,5 +94,7 @@
       </div>
       <div id="logo"></div>
     </form>
+    
 </body>
+
 </html>
