--- a/trunk/Source/MyImage/inc/css/web.css
+++ b/trunk/Source/MyImage/inc/css/web.css
@@ -86,6 +86,7 @@ body{
 	font-weight:bold;
 	background:url(../img/menuitem.png) no-repeat top right;
 	height:20px;
+	width:180px;
 }
 .nav ul li a{
 	color: #FFFF00;
