--- a/Source/MyImage/MasterPage.master
+++ b/Source/MyImage/MasterPage.master
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="inc/css/calendar.css" media="screen" />
     <script type='text/javascript' src='inc/js/calendar_us.js'></script>
     <script type='text/javascript' src="inc/js/js.js"></script>
+    <script type='text/javascript' src='inc/js/jquery-1.3.2.js'></script>
+    <script type='text/javascript' src="inc/js/jquery.MultiFile.js"></script>
 </head>
 <body onscroll="hideGetTop('gettop')">
     <form id="mainform" runat="server">
